# vfl-xgboost-app

./: CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: visual-tests.yml
apps/ui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
apps/ui/.storybook/: preview.ts
apps/ui/scripts/: _playwright-docker.sh  baseline-linux.sh  test-visual-linux.sh
apps/ui/src/: App.tsx  index.css
apps/ui/src/components/auc-chart/: AucChart.tsx
apps/ui/src/components/filmstrip/: Filmstrip.tsx
apps/ui/src/components/final-reveal/: FinalRevealFrame.tsx
apps/ui/src/components/guest-panel/: GuestPanel.tsx
apps/ui/src/components/host-panel/: HostPanel.tsx
apps/ui/src/components/hud/: Hud.tsx
apps/ui/src/lib/: playback.ts  runMeta.ts  tooltips.ts  trace-reader.ts  usePlayback.ts
apps/ui/src/stories/: Act1Layout.stories.tsx  Act2Layout.stories.tsx  AucChart.stories.tsx  Filmstrip.stories.tsx  FinalRevealFrame.stories.tsx  GuestPanel.stories.tsx  HostPanel.stories.tsx  Hud.stories.tsx  MessageWire.stories.tsx  ReconstructionBeat.stories.tsx  TitleCard.stories.tsx  TokenSheet.stories.tsx  TreeSummaryPanel.stories.tsx  TreeView.stories.tsx  trace-fixture.ts
apps/ui/src/tests/: visual.spec.ts
apps/ui/traces/: uci-adult-canonical.jsonl
docs/adr/: 0001-architecture.md  0002-playwright-baseline-strategy.md  README.md
fxgb/: demo.py  guest_service.py  host_service.py
scripts/: bake_canonical_trace.py
scripts/tests/: test_bake_canonical_trace.py
tests/: test_smoke.py
(+12 files in other folders)
