[project]
name = "fxgb-playground"
version = "0.0.1"
description = "Vertical federated XGBoost with pluggable privacy backends"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.7",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "tests"]
markers = ["slow: marks tests that download data and train a model"]
